# ray_service_project

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  env.example  pyproject.toml
ray_service/: config.py  heartbeat.py  logging_setup.py  model_registry.py  run.py  service.py  task_queue.py
ray_service/models/: base.py  external.py  local.py  nano_banana.py
