[tool.poetry]
name = "ray-service-project"
version = "0.1.0"
description = "基于 Ray Serve 的算法服务框架，支持本地模型与外部 API"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "ray_service" }]

[tool.poetry.dependencies]
python = "^3.10"
ray = { extras = ["serve"], version = "^2.8.1" }
fastapi = "^0.115.0"
uvicorn = "^0.30.6"
redis = "^5.0.4"
pydantic = "^2.8.2"
pydantic-settings = "^2.5.2"
httpx = "^0.27.0"
python-dotenv = "^1.0.1"
aiohttp = "^3.10.8"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.4"
mypy = "^1.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

